Add a button to clear selection bringing back the cook pot image

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <img id="cook-pot" src="assets/cookpot.svg">
         <div id="should-make-text" hidden><em>You should make:</em></div>
         <div id="recipe-text"></div>
+        <div id="button-container">
+          <button id="clear-btn" hidden>CLEAR</button>
+        </div>
       </div>
     </main>
   </body>
