Add functionality to entire meal button generating an entire meal and dispalying it for user

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="box-2">
         <img id="cook-pot" src="assets/cookpot.svg">
         <div id="should-make-text" hidden><em>You should make:</em></div>
-        <div id="recipe-text"></div>
+        <div id="recipe-text-location" class="recipe-text"></div>
         <div id="button-container">
           <button id="clear-btn" hidden>CLEAR</button>
         </div>
