Refactor how recipes are being generated and lays the foundation for the saving recipies functionality

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <form id="custom-recipe-form">
         <div class="custom-meal">
           <label for="recipe-type-input">Recipe Type:</label>
-          <input id="recipe-type-input" class="recipe-inputs">
+          <input id="recipe-type-input" class="recipe-inputs" required>
         </div>
         <div class="custom-meal">
           <label for="recipe-name-input">Recipe Name:</label>
-          <input id="recipe-name-input" class="recipe-inputs">
+          <input id="recipe-name-input" class="recipe-inputs" required>
         </div>
         <button>ADD NEW</button>
       </form>
