Add refactoring to allow for better user experience

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div id="should-make-text" hidden><em>You should make:</em></div>
         <div id="recipe-text-location" class="recipe-text"></div>
         <div id="button-container">
+          <button id="save-recipe-button" hidden>SAVE RECIPE</button>
           <button id="clear-btn" hidden>CLEAR</button>
         </div>
       </div>
