Add the users name at the top of the page on log in

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <div id="whats-for-dinner"><strong>Whats for dinner <span id=current-user></span>?</strong></div>
+      <div id="whats-for-dinner"><strong>Whats for dinner<span id=current-user></span>?</strong></div>
       <button id="add-a-recipe">Add A Recipe</button>
     </header>
 
@@ -19,7 +19,7 @@
       </div>
       <div class="option">
         <label for="password">Password:</label>
-        <input id="password">
+        <input type="password" id="password">
       </div>
       <div class="option">
         <button id="log-in-button">Log In</button>
