--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     <form id="log-in-form">
       <div class="option">
         <label for="username">Username:</label>
-        <input id="username">
+        <input id="username" required>
       </div>
       <div class="option">
         <label for="password">Password:</label>
-        <input type="password" id="password">
+        <input type="password" id="password" required>
       </div>
       <div class="option">
         <button id="log-in-button">Log In</button>
         <button id="sign-up-button">Sign Up</button>
+        <button id="guest-button">Log In As Guest</button>
       </div>
       <div>
     </form>
